# stream-data-processor

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  apply_clang_format.sh  csv_echo_server.cpp  csv_echo_server.h  main.cpp  main_finalize.cpp  main_input.cpp  server.cpp  server.h  test_script.sh  utils.cpp  utils.h
benchmarks/: CMakeLists.txt
data_handlers/: aggregate_handler.cpp  aggregate_handler.h  data_handler.h  (+9 more)
src/: CMakeLists.txt
src/configuration/: README.md
src/consumers/: consumer.h  consumers.h  print_consumer.cpp  print_consumer.h  publisher_consumer.cpp  publisher_consumer.h  tcp_consumer.cpp  tcp_consumer.h
src/data_handlers/: aggregate_handler.cpp  aggregate_handler.h  data_handler.h  data_handlers.h  data_parser.cpp  data_parser.h  default_handler.cpp  default_handler.h  filter_handler.cpp  filter_handler.h  group_handler.cpp  group_handler.h  map_handler.cpp  map_handler.h  serialized_record_batch_handler.cpp  serialized_record_batch_handler.h  sort_handler.cpp  sort_handler.h
src/data_handlers/aggregate_functions/: aggregate_function.h  aggregate_functions.h  first_aggregate_function.cpp  first_aggregate_function.h  last_aggregate_function.cpp  last_aggregate_function.h  max_aggregate_function.cpp  mean_aggregate_function.cpp  min_aggregate_function.cpp
src/kapacitor_udf/: README.md  agent.cpp  agent.h  agent_client.cpp  agent_client.h  group_parser.cpp  group_parser.h  kapacitor_udf.h  points_converter.cpp  points_converter.h  udf.proto  udf_agent.cpp  udf_agent.h  udf_agent_client.cpp  udf_agent_client.h
src/kapacitor_udf/request_handlers/: aggregate_options_parser.cpp  aggregate_options_parser.h  batch_aggregate_request_handler.cpp  batch_aggregate_request_handler.h  batch_to_stream_request_handler.cpp  batch_to_stream_request_handler.h  derivative_request_handler.cpp  dynamic_window_request_handler.cpp  dynamic_window_request_handler.h  group_tags_parser.cpp  group_tags_parser.h  invalid_option_exception.h  pipeline_request_handler.cpp  pipeline_request_handler.h  record_batch_request_handler.cpp  record_batch_request_handler.h  request_handler.cpp  request_handler.h  stateful_threshold_request_handler.cpp  stateful_threshold_request_handler.h  stream_to_stream_request_handler.cpp  stream_to_stream_request_handler.h
src/kapacitor_udf/request_handlers/aggregate_request_handlers/: aggregate_options_parser.cpp  aggregate_options_parser.h  batch_aggregate_request_handler.cpp  batch_aggregate_request_handler.h  stream_aggregate_request_handler.cpp  stream_aggregate_request_handler.h
src/kapacitor_udf/utils/: grouping_utils.cpp  grouping_utils.h  points_converter.cpp  points_converter.h
src/metadata/: column_typing.cpp  column_typing.h  grouping.cpp  grouping.h  help.cpp  metadata.proto  time_metadata.cpp
src/node_pipeline/: node_pipeline.cpp  node_pipeline.h
src/nodes/: eval_node.cpp  eval_node.h  finalize_node.cpp  finalize_node.h  node.cpp  node.h  node_base.cpp  node_base.h  nodes.h  pass_node_base.cpp  pass_node_base.h  period_node.cpp  period_node.h  print_node.cpp  print_node.h  window_node.cpp  window_node.h
src/nodes/data_handlers/: data_handler.h  data_parser.cpp  data_parser.h  serialized_record_batch_handler.cpp  serialized_record_batch_handler.h
src/nodes/data_handlers/parsers/: csv_parser.cpp  csv_parser.h  graphite_parser.cpp  graphite_parser.h  parser.h
src/nodes/period_handlers/: period_handler.h  serialized_period_handler.cpp  serialized_period_handler.h
src/period_handlers/: join_handler.cpp  join_handler.h  period_handler.h  period_handlers.h  serialized_period_handler.cpp  serialized_period_handler.h  window_handler.cpp  window_handler.h
src/producers/: external_listener_producer.cpp  external_listener_producer.h  producer.cpp  producer.h  producers.h  subscriber_producer.cpp  subscriber_producer.h  tcp_producer.cpp  tcp_producer.h
src/record_batch_handlers/: aggregate_handler.cpp  aggregate_handler.h  default_handler.cpp  default_handler.h  filter_handler.cpp  filter_handler.h  group_dispatcher.cpp  group_dispatcher.h  group_handler.cpp  group_handler.h  join_handler.cpp  join_handler.h  map_handler.cpp  map_handler.h  pipeline_handler.cpp  pipeline_handler.h  record_batch_handler.h  record_batch_handlers.h  sort_handler.cpp  sort_handler.h  window_handler.cpp  window_handler.h
src/record_batch_handlers/aggregate_functions/: aggregate_function.h  aggregate_functions.cpp  aggregate_functions.h  first_aggregate_function.cpp  first_aggregate_function.h  last_aggregate_function.cpp  last_aggregate_function.h  max_aggregate_function.cpp  max_aggregate_function.h  mean_aggregate_function.cpp  mean_aggregate_function.h  min_aggregate_function.cpp  min_aggregate_function.h
src/record_batch_handlers/grouping/: grouping.cpp  grouping.h  grouping.proto
src/record_batch_handlers/stateful_handlers/: derivative_handler.cpp  derivative_handler.h  handler_factory.h  stateful_handler.h  threshold_state_machine.cpp  threshold_state_machine.h  window_handler.cpp  window_handler.h
src/server/: unix_socket_client.h  unix_socket_server.cpp  unix_socket_server.h
src/utils/: arrow_utils.cpp  arrow_utils.h  compute_utils.cpp  compute_utils.h  convert_utils.cpp  convert_utils.h  data_converter.cpp  data_converter.h  network_utils.cpp  network_utils.h  serialize_utils.cpp  serialize_utils.h  serializer.cpp  serializer.h  string_utils.cpp  string_utils.h  time_utils.cpp  transport_utils.cpp  transport_utils.h  utils.h  uvarint.cpp  uvarint.h  uvarint_utils.cpp  uvarint_utils.h
src/utils/parsers/: csv_parser.cpp  csv_parser.h  graphite_parser.cpp  graphite_parser.h  parser.h
test/: CMakeLists.txt  CMakeLists.txt.in  aggregate_functions_test.cpp  data_handlers_test.cpp  gmock_catch_interceptor.cpp  gmock_catch_interceptor.h  help.h  kapacitor_udf_test.cpp  metadata_test.cpp  parsers_test.cpp  period_handlers_test.cpp  record_batch_builder.cpp  record_batch_builder.h  record_batch_handlers_test.cpp  test_help.h  test_main.cpp  utils_test.cpp  uvarint_test.cpp
(+70 files in other folders)
